samples/_failures_safe/1761004484_5f921e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d86025d1.c: In function ‘main’:
./samples/SAFE/__tmp_d86025d1.c:150:20: error: expected ‘;’ at end of input
  150 |         level_input
      |                    ^
      |                    ;
./samples/SAFE/__tmp_d86025d1.c:150:9: error: expected declaration or statement at end of input
  150 |         level_input
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_d86025d1.c:150:9: error: expected declaration or statement at end of input
